Added more codes. Changed posts to 4 per page. Fixed posts.html not using per_page from config.

--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -8,7 +8,7 @@ script_includes:
 
 <script>
   const PER_PAGE =
-    {{ page.per_page | default: site.per_page | jsonify }};
+    {{ site.per_page | jsonify }};
 
   const PIN_ICON =
     {{ site.data.locales[lang].post.pin_prompt | jsonify }};
